<resources>
    <string name="app_name">掌上CPI</string>
    <string name="mysql_password">qq3199619</string>


    <!--register-->
    <string name="register_cpi_account">注册CPI帐号</string>
    <string name="register_user_name">设置你的帐号</string>
    <string name="register_password">设置你的密码</string>
    <string name="register_password_again">再次输入密码</string>
    <string name="register_nick_name">设置你的昵称</string>
    <string name="register_sex">设置你的性别</string>
    <string name="register_user_illustration">设置个人说明</string>
    <string name="register_btn_register">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>